# bevy_games

aim_trainer/: Cargo.toml
aim_trainer/src/: main.rs
flappy_birb/: Cargo.toml
flappy_birb/src/: main.rs
minesweeper/: Cargo.toml
minesweeper/src/: main.rs
