[package]
name = "aim_trainer"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 1

[profile.release]
codegen-units = 1
lto = "thin"

[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.wgpu-types]
debug-assertions = false

[dependencies]
bevy = "0.16.1"
log = { version = "*", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
rand = "0.9.1"

[features]
dev = [
    "bevy/dynamic_linking",
    "bevy/bevy_dev_tools",
    "bevy/file_watcher",
    "bevy/embedded_watcher",
    "bevy/bevy_ui_debug",
    "bevy/track_location",
]

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
nonstandard_macro_braces = "warn"
